# ShoppingAppQML

./: CMakeLists.txt  README.md  main.cpp
qml/: Main.qml
qml/components/: AddCartBtn.qml  AddToCartWidget.qml  AppStack.qml  HeaderWidget.qml  IconButton.qml  MorePopup.qml  ProductDelegate.qml  RoundedImage.qml
qml/models/: ProductsModel.qml
qml/theme/: AppTheme.qml  qmldir
qml/views/: Dashboard.qml  ProductView.qml
